# weather-hippo

./: .gitignore  README.md  main.tf
docs/: backend.md  plan.md
frontend/: Dockerfile  index.html  script.js  style.css
weather-api/: Dockerfile  Makefile  README.md  main.py  mappers.py  pyproject.toml  requirements.txt
